Volume to Mesh modifier on vdb sequence fails when rendering (F12 or animation ctrl-F12) #82393

Closed
opened 2020-11-04 10:08:35 +01:00 by Pedro Anuarbe · 19 comments

Blender Version
Broken: 2.92.0 Alpha, branch: master, date: 2020-11-03, hash: 3049704b15
Worked: -

Short description of error
The volume to mesh modifier renders correctly in the Viewport but fails when rendering (F12 or animation ctrl-F12)

Exact steps for others to reproduce the error

try to render animation with ctrl+F12

#82393.zip

In a debug build, following Assert is triggered

BLI_assert failed: source/blender/blenkernel/intern/modifier.c:420, BKE_modifier_set_error(), at 'BLI_findindex(&ob_orig->modifiers, md_orig) != -1'
**Blender Version** Broken: 2.92.0 Alpha, branch: master, date: 2020-11-03, hash: 3049704b1505 Worked: - **Short description of error** The volume to mesh modifier renders correctly in the Viewport but fails when rendering (F12 or animation ctrl-F12) **Exact steps for others to reproduce the error** - import an openvdb volume sequence as volume (for example any of https://jangafx.com/software/embergen/download/free-vdb-animations/) - apply 'volume to mesh' modifier to default cube selecting the correct grid # try to render animation with ctrl+F12 [#82393.zip](https://archive.blender.org/developer/F9193696/T82393.zip) In a debug build, following Assert is triggered ``` BLI_assert failed: source/blender/blenkernel/intern/modifier.c:420, BKE_modifier_set_error(), at 'BLI_findindex(&ob_orig->modifiers, md_orig) != -1' ```
Author

Added subscriber: @peancor

Added subscriber: @peancor

Added subscribers: @Blendify, @JacquesLucke, @dfelinto

Added subscribers: @Blendify, @JacquesLucke, @dfelinto

This is a limitation of the current system, the moment you apply the modifier to a mesh you loose the animation data.

That said this is not documented in the manual and it doesn't warn the users about it. In fact the volume to mesh modifier is not mentioned on blender/documentation#79215.

@JacquesLucke can you coordinate with @Blendify to have this modifier in the manual? (as in, add it yourself or talk to Aaron about it).

This is a limitation of the current system, the moment you apply the modifier to a mesh you loose the animation data. That said this is not documented in the manual and it doesn't warn the users about it. In fact the volume to mesh modifier is not mentioned on blender/documentation#79215. @JacquesLucke can you coordinate with @Blendify to have this modifier in the manual? (as in, add it yourself or talk to Aaron about it).

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

@peancor are you sure the mesh object is working animated in the viewport? In my tests here the moment you apply the modifier it convert only the current frame to the mesh.

I can't possibly think of it working differently. I will update the task description accordingly, but I can always roll back the changes.

@peancor are you sure the mesh object is working animated in the viewport? In my tests here the moment you apply the modifier it convert only the current frame to the mesh. I can't possibly think of it working differently. I will update the task description accordingly, but I can always roll back the changes.
Dalai Felinto changed title from Volume to Mesh modifier on vdb sequence not rendering (only renders in viewport) to Volume to Mesh modifier on vdb sequence lack of warning/documentation 2020-11-04 11:22:34 +01:00

Thinking of it, there is no warning either for armature modifier (and probably for alembic). I would say just there is no warning needed, but I think we should keep this open until the feature is in the manual.

Thinking of it, there is no warning either for armature modifier (and probably for alembic). I would say just there is no warning needed, but I think we should keep this open until the feature is in the manual.
Jacques Lucke was assigned by Dalai Felinto 2020-11-04 11:24:38 +01:00
Member

I also don't know why there should be an extra warning for this specific modifier. Every time you apply any modifier you loose the animation if there was any.

I also don't know why there should be an extra warning for this specific modifier. Every time you apply any modifier you loose the animation if there was any.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

@dfelinto: could it be that you misunderstood the report?

For me, this sounds like the stuff is not rendering at all with F12 / Ctrl F12 [even if the modifier is still present].
so the wording is a bit misleading, I think "apply 'volume to mesh' modifier to default cube selecting the correct grid" does not really mean apply, more like add

When I try to render, I am getting

BLI_assert failed: source/blender/blenkernel/intern/modifier.c:420, BKE_modifier_set_error(), at 'BLI_findindex(&ob_orig->modifiers, md_orig) != -1'
@dfelinto: could it be that you misunderstood the report? For me, this sounds like the stuff is not rendering at all with F12 / Ctrl F12 [even if the modifier is still present]. so the wording is a bit misleading, I think "apply 'volume to mesh' modifier to default cube selecting the correct grid" does not really mean **apply**, more like **add** When I try to render, I am getting ``` BLI_assert failed: source/blender/blenkernel/intern/modifier.c:420, BKE_modifier_set_error(), at 'BLI_findindex(&ob_orig->modifiers, md_orig) != -1' ```

To render you need to setup the materials and all that. Without a sample file (missing all but the openvdb) there is not much that can be done.

Besides, the report refer to animated sequence. I will wait to see if the reporter clarify this further.

To render you need to setup the materials and all that. Without a sample file (missing all but the openvdb) there is not much that can be done. Besides, the report refer to animated sequence. I will wait to see if the reporter clarify this further.
Author

@dfelinto, @JacquesLucke, @lichtwerk

sorry, the modifier is not applied, It is only added to the mesh. In the viewport the animation renders correctly when i press spacebar but not when i try to render animation (Ctrl+F12).

I have not included an example file because of the size of the vdb sequences.

@dfelinto, @JacquesLucke, @lichtwerk sorry, the modifier is not applied, It is only added to the mesh. In the viewport the animation renders correctly when i press spacebar but not when i try to render animation (Ctrl+F12). I have not included an example file because of the size of the vdb sequences.
Member

In #82393#1047885, @dfelinto wrote:
To render you need to setup the materials and all that.
Besides, the report refer to animated sequence.

Not sure what you are trying to say.

I have added an example file to the report.
Without applying any modifier, this is not rendering for me in a Debug build [with beforementioned Assert]

> In #82393#1047885, @dfelinto wrote: > To render you need to setup the materials and all that. > Besides, the report refer to animated sequence. Not sure what you are trying to say. I have added an example file to the report. Without applying any modifier, this is not rendering for me in a Debug build [with beforementioned Assert]
Philipp Oeser changed title from Volume to Mesh modifier on vdb sequence lack of warning/documentation to Volume to Mesh modifier on vdb sequence fails when rendering animation (ctrl-F12) 2020-11-04 11:59:42 +01:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

@lichtwerk if you render (F12) do you see anything different than when rendering animation? Here I don't see anything in either case.

@lichtwerk if you render (F12) do you see anything different than when rendering animation? Here I don't see anything in either case.
Member

In #82393#1047935, @dfelinto wrote:
@lichtwerk if you render (F12) do you see anything different than when rendering animation? Here I don't see anything in either case.

Nope, F12 / Ctrl+F12 are the same, will correct report description

> In #82393#1047935, @dfelinto wrote: > @lichtwerk if you render (F12) do you see anything different than when rendering animation? Here I don't see anything in either case. Nope, F12 / Ctrl+F12 are the same, will correct report description
Philipp Oeser changed title from Volume to Mesh modifier on vdb sequence fails when rendering animation (ctrl-F12) to Volume to Mesh modifier on vdb sequence fails when rendering (F12 or animation ctrl-F12) 2020-11-04 12:46:40 +01:00
Author

@lichtwerk , @dfelinto . If you change one property in the volume (for example turning the 'sequence' checkbox off and on) it usually renders the still image but not the animation.

@lichtwerk , @dfelinto . If you change one property in the volume (for example turning the 'sequence' checkbox off and on) it usually renders the still image but not the animation.
Member

I have a fix for master already, but got a seemingly unrelated crash in the example file in the release branch, checking that now.

I have a fix for master already, but got a seemingly unrelated crash in the example file in the release branch, checking that now.

This issue was referenced by cfcdae5549

This issue was referenced by cfcdae5549f37198fa8e66ee512f1093764ef022
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82393
No description provided.