Fix T82393: Volume to Mesh modifier with sequence fails during rendering

The issue was that the volume for the current frame
might not have been loaded already by the time the
modifier runs.

The solution is simply to make sure that the volume
is loaded. This is similar to the Volume Displace modifier.